tests/ui/error-codes/E0277-2.stderr
error[E0277]: `*const u8` cannot be sent between threads safely
  --> $DIR/E0277-2.rs:16:15
   |
LL |     is_send::<Foo>();
   |               ^^^ `*const u8` cannot be sent between threads safely
   |
   = help: within `Foo`, the trait `Send` is not implemented for `*const u8`
   = note: consider using `std::sync::Arc<*const u8>`; for more information visit <https://doc.rust-lang.org/book/ch16-03-shared-state.html>
note: required because it appears within the type `Baz`
  --> $DIR/E0277-2.rs:9:8
   |
LL | struct Baz {
   |        ^^^
note: required because it appears within the type `Bar`
  --> $DIR/E0277-2.rs:5:8
   |
LL | struct Bar {
   |        ^^^
note: required because it appears within the type `Foo`
  --> $DIR/E0277-2.rs:1:8
   |
LL | struct Foo {
   |        ^^^
note: required by a bound in `is_send`
  --> $DIR/E0277-2.rs:13:15
   |
LL | fn is_send<T: Send>() { }
   |               ^^^^ required by this bound in `is_send`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
